<resources>
    <string name="app_name">Bop It Mobile</string>
    <string name="imageLogo">TODO</string>
    <string name="TextName">Ulises Muñoz\n umunoz21@alumnos.utalca.cl</string>
    <string name="app_description">Bop It Mobile, Desarrollado por Ulises Muñoz\n\nAplicación que simula el juguete de Bop It, pero usando funcionalidades de dispositivos móviles.</string>

    <!-- Pantalla de inicio -->
    <!-- Botón Información -->
    <string name="PlayTextButton">Jugar</string>

    <!-- Botón Información -->
    <string name="AboutTextButton">Información</string>

    <!-- Botón Preferencias -->
    <string name="SettingTextButton">Preferencias</string>

    <!-- Botón Volver al Menu -->
    <string name="BackToMenuTextButton">Volver</string>

    <!-- Pantalla de juego -->
    <!-- Texto de la acción -->
    <string name="ActionText">Acción</string>

    <string name="PressText">Presiona</string>

    <string name="SwipeText">Desliza</string>

    <string name="HoldText">Mantiene</string>

    <string name="ShakeText">Agita</string>


    <!-- Texto del timer-->
    <string name="TimerText">Tiempo restante</string>

    <!-- Texto de puntajes-->
    <string name="ScoreText">Score: </string>
    <string name="HighScoreText">HighScore: </string>

    <!-- Texto de fin de juego-->
    <string name="GameOverText">Fin de la partida </string>
    <string name="NewHighScore">Nuevo HighScore </string>


    <string name="SettingsTitle">Configuraciones</string>
    <string name="title_activity_preferences">PreferencesActivity</string>

    <!-- Preference Titles -->
    <string name="UserPreference_header">Preferencias de usuario</string>
    <string name="GamePreference_header">Preferencias de juego</string>
    <string name="Administration_header">Administracion general</string>

    <!-- User Preferences -->
    <string name="username_title">Nombre Usuario</string>
    <string name="highscore_solitary_title">Solitary HighScore</string>
    <string name="highscore_title">HighScore</string>
    <string name="HighScore_solitary_value">0</string>
    <string name="HighScore_value">0</string>

    <!-- Game Preferences -->
    <string name="dificulty_title">Dificultad de la aplicación</string>
    <string name="dificulty2_title">Numero de aciertos por nivel</string>
    <string name="theme_title">Tema de la aplicación</string>
    <string name="volume_title">Nivel de volumen de la aplicación</string>

    <!-- Administration Preference -->
    <string name="restart_preference">Reiniciar preferencias</string>
    <string name="restart_preference_body">Restablecer todas las preferencias a sus valores predeterminados</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


</resources>