<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/UserPreference_header">

        <EditTextPreference
            app:key="Username"
            app:title="@string/username_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="0"
            app:key="HighScore"
            app:selectable="false"
            app:title="@string/highscore_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="0"
            app:key="HighScoreSolitary"
            app:selectable="false"
            app:title="@string/highscore_solitary_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/GamePreference_header">
        <ListPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="7000"
            android:title="@string/dificulty_title"
            app:entries="@array/dificulty_entreis"
            app:entryValues="@array/dificulty_values"
            app:key="dificulty" />

        <ListPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="10"
            android:title="@string/dificulty2_title"
            app:entries="@array/dificulty2_entreis"
            app:entryValues="@array/dificulty2_values"
            app:key="dificulty2" />


        <ListPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="DarkRed"
            android:title="@string/theme_title"
            app:entries="@array/theme_entreis"
            app:entryValues="@array/theme_values"
            app:key="theme" />
        <ListPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="50"
            android:title="@string/volume_title"
            app:entries="@array/volume_entreis"
            app:entryValues="@array/volume_values"
            app:key="volume" />
    </PreferenceCategory>
    <PreferenceCategory
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/Administration_header">

        <Preference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:key="reset_key"
            android:title="@string/restart_preference"
            android:summary="@string/restart_preference_body" />
    </PreferenceCategory>

</PreferenceScreen>