<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/DarkRed"
    tools:context=".GameOverActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginStart="105dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="105dp"
        android:contentDescription="@string/imageLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bop_it_logo"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/GameOverText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="50dp"
        android:text="@string/GameOverText"
        android:textColor="@color/white"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/ScoreTextGameOver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="196dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="196dp"
        android:text="@string/ScoreText"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GameOverText" />

    <TextView
        android:id="@+id/HighScoreTextGameOver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="196dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="196dp"
        android:text="@string/HighScoreText"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ScoreTextGameOver" />

    <Button
        android:id="@+id/ToMenuButton"
        android:layout_width="250dp"
        android:layout_height="63dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="67dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="50dp"
        android:text="@string/BackToMenuTextButton"
        android:textColor="@color/white"
        android:textColorHighlight="@color/DarkRed"
        android:textColorHint="@color/DarkRed"
        android:textColorLink="@color/DarkRed"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HighScoreTextGameOver"
        tools:ignore="UnknownIdInLayout,TextSizeCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>