<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/DarkRed"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginStart="105dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="105dp"
        android:contentDescription="@string/imageLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bop_it_logo"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/PlayButton"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="108dp"
        android:text="@string/PlayTextButton"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/AboutButton"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="108dp"
        android:text="@string/AboutTextButton"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PlayButton" />

    <Button
        android:id="@+id/SettingButton"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="108dp"
        android:text="@string/SettingTextButton"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AboutButton" />

</androidx.constraintlayout.widget.ConstraintLayout>