<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/DarkRed"
    tools:context=".AboutActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginStart="105dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="105dp"
        android:contentDescription="@string/imageLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bop_it_logo"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textAbout"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="188dp"
        android:text="@string/app_description"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/BackToMenuButton"
        android:layout_width="250dp"
        android:layout_height="63dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="38dp"
        android:text="@string/BackToMenuTextButton"
        android:textColor="@color/white"
        android:textColorHighlight="@color/DarkRed"
        android:textColorHint="@color/DarkRed"
        android:textColorLink="@color/DarkRed"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textAbout" />

</androidx.constraintlayout.widget.ConstraintLayout>